# boogie-bot

./: .gitignore  Cargo.toml
emoji_converter/: Cargo.toml
emoji_converter/src/: lib.rs
src/: colors.rs  main.rs  prelude.rs  store.rs  utills.rs
src/commands/: mod.rs  ping.rs  react.rs  spell.rs
src/commands/bp/: give.rs  info.rs  mod.rs  start.rs  utills.rs
